# 8bit-compiler

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: codegen.docs  codegen.txt
include/: ut.hpp
include/codegen/: codegenarator.hh
include/front/lex/: lexer.hh
include/front/parse/: ast.hh  parser.hh
include/front/token/: token.hh
sample/: first.asm  first.simpl  test.asm  test.simpl
scripts/: driver.sh
src/: main.cpp
src/lex/: lexer.cc
src/parse/: parser.cc
tests/lex/: lex_test.cc  lex_ut.cc
tests/parse/: parse_test.cc  parser_ut.cc
